nginx-gateway/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: nginx-blue-external
spec:
  type: ExternalName
  # {Service Name}.{Namespace}.svc.cluster.local 형식으로 작성
  externalName: nginx-blue.blue
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: nginx-red-external
spec:
  type: ExternalName
  externalName: nginx-red.red
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: nginx-black-external
spec:
  type: ExternalName
  externalName: nginx-gateway
