nginx-gateway/service.yaml
# templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
