nginx-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-gateway
spec:
  ingressClassName: nginx
  rules:
    - host: gateway.club012.com
      http:
        paths:
          - path: /blue
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-blue
                port:
                  number: 80
          - path: /red
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-red
                port:
                  number: 80
          - path: /black
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-black
                port:
                  number: 80
          - path: /black
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-black
                port:
                  number: 80
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-gateway
                port:
                  number: 80
